logs/validate.20260408-035554.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02
error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:791:25
    |
791 |                     if (elem as int) < self.universe_size as int {
    |                         ^^^^ not found in this scope

error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:792:33
    |
792 |                         let k = elem as int / 64;
    |                                 ^^^^ not found in this scope

error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:793:33
    |
793 |                         let j = elem as int % 64;
    |                                 ^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 7s
Sampled Memory Usage: peak rust_verify RSS: 3429MB, peak z3 RSS: 646MB, min free: 22635MB
Sampled CPU Usage: rust_verify: 65s, z3 children: 51s
